# thinking_neuron

./: README.md  client.py  config.yaml  llm_test.py  main.py  pyproject.toml  sa_test.py
chat_logs/: thought_2025_02_28 17_48_54.md  thought_2025_02_28 18_08_30.md  thought_2025_02_28 18_11_21.md  thought_2025_02_28 18_13_36.md  thought_2025_02_28 18_19_49.md  thought_2025_02_28 18_28_37.md  thought_2025_02_28 18_32_50.md  thought_2025_02_28 18_34_52.md  thought_2025_02_28 18_39_50.md  thought_2025_03_03 05_50_25.md
examples/: client.py  entity.py  improve_self.py  llm_test.py  server.py
thinking_neuron/: __init__.py  config.py  entity.py  llm_manager.py  models.py  response.py  self_awareness.py  thinking_server.py
thinking_neuron/models/: __init__.py  request.py  response.py  state.py
thinking_neuron/tests/: __init__.py  conftest.py  llm_manager_tests.py  thinking_server_tests.py
thinking_tool/: __init__.py  base.py  entity.py  llm_manager.py  self_awareness.py  thinking_client.py  thinking_server.py
thinking_tool/models/: __init__.py  base.py  config.py  request.py  response.py  state.py
thinking_tool/tests/: __init__.py  conftest.py  llm_manager_tests.py  thinking_server_tests.py
